# dealii_catmull_clark

./: CMakeLists.txt  README.catmull_clark.md  README.md
examples/catmull-clark-test/: CMakeLists.txt  copy_step-4.cpp  step-4.cc
examples/catmull-clark-test/include/: CCmapping_fe_field.hpp  Catmull_Clark_Data.hpp  FE_Catmull_Clark.hpp  MappingFEField_hp.hpp  polynomials_Catmull_Clark.hpp  polynomials_CubicBSpline.hpp
examples/catmull-clark-test/source/: CCmapping_fe_field.cpp  Catmull_Clark_Data.cpp  FE_Catmull_Clark.cpp  FE_Catmull_Clark.hpp  MappingFEField_hp.cpp  polynomials_Catmull_Clark.cpp  polynomials_Catmull_Clark.hpp  polynomials_CubicBSpline.cpp  polynomials_CubicBSpline.hpp
examples/catmull-clark-test_3/: CC_shell.cc  CMakeLists.txt  Catmull_Clark_Data_backup.hpp
examples/catmull-clark-test_3/addition_lib/: CMakeLists.txt
examples/catmull-clark-test_3/addition_lib/include/: CatmullClark_subd.hpp  polynomials_Catmull_Clark.hpp
examples/catmull-clark-test_3/addition_lib/source/: CatmullClark_subd.cpp  Catmull_Clark_Data.cpp  FE_Catmull_Clark.cpp  MappingFEField_hp.cpp  polynomials_Catmull_Clark.cpp
examples/catmull-clark-test_3/tests/: CMakeLists.txt  coupled_shell.cc  coupled_shell_2.cc  coupled_shell_flexo.cc  coupled_shell_tests.cc  cylinder.cc  elastic_plate.cc  full_sphere.cc  half_torus.cc  incompressible_electroelastic_shell.cc  mag_shell_nonlinear.cc  mag_shell_nonlinear2.cc  nonlinear_elastic_shell_validation.cc  nonlinear_shell.cc  nonlinear_shell_GL_strain.cc  plate_inflation_ac.cc  shell_elastic_inflation.cc  shell_elastic_nonlinear.cc  shell_elastic_nonlinear_tension.cc  shell_origin.cc  sphere_AL.cc  sphere_arclength (original).cc  sphere_arclength.cc  sphere_arclength.cp  sphere_arclength_1.cc  sphere_inflation.cc  sphere_inflation_ac.cc  sphere_inflation_ac1.cc  sphere_inflation_ac2.cc  sphere_inflation_u.cc  spot_inflation.cc  torus_inflation.cc  unit_test.cc  unit_test_verification.cc
examples/new_tests/: CMakeCache.txt
examples/new_tests/addition_lib/include/: Catmull_Clark_Data.hpp  FE_Catmull_Clark.hpp
examples/new_tests/tests/: CMakeLists.txt  capsule.cc  cooks_membrane.cc  coupled_shell.cc  coupled_shell_tests.cc  cylinder.cc  elec_sphere_arclength.cc  electro_plate_inflation_ac.cc  electroelastic_torus.cc  electroelastic_torus_phi.cc  incompressible_electroelastic_shell.cc  shell_elastic_inflation.cc  shell_elastic_inflation_arc.cc  torus_inflation.cc
examples/step-35/: biofilm.cc
include/deal.II/dofs/: dof_accessor.h  dof_accessor.templates.h  dof_levels.h
include/deal.II/fe/: fe_base.h  fe_tools.templates.h
include/deal.II/hp/: dof_level.h
source/dofs/: dof_accessor.cc
source/fe/: fe_system.cc
